Update code + tests to use builders